<resources>
    <string name="app_name">AppointmentBooker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="createApp">Create Appointment</string>
    <string name="viewEditApp">View/Edit Appointment</string>
    <string name="deleteApp">Delete Appointment</string>
    <string name="moveApp">Move Appointment</string>
    <string name="searchApp">Search Appointment</string>
    <string name="translateApp">Translate Appointment</string>

    <string name="appointmentTitle">Title:</string>
    <string name="appointmentTime">Time:</string>
    <string name="appointmentDescription">Description:</string>
    <string name="saveApp">Save Appointment</string>

    <string name="updateEvent">Amend Details</string>
    <string name="from_label">From: </string>
    <string name="inputTextHint">input text</string>
    <string name="to_label">To: </string>
    <string name="translateBUTTON">Translate</string>
    <string name="translation_error">(Translationerror)</string>
    <string name="translateTitle">Translate Description</string>
    <string name="saveTrans">Save</string>
    <string name="cancelTrans">Cancel</string>

</resources>
