<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen">

    <CalendarView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:id="@+id/calendarView"
        android:clickable="true"
        android:firstDayOfWeek="2"
        android:scrollbars="horizontal"
        android:showWeekNumber="false"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/createApp"
        android:id="@+id/createBtn"
        android:layout_above="@+id/viewEditBtn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/viewEditApp"
        android:id="@+id/viewEditBtn"
        android:layout_above="@+id/searchBtn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/searchApp"
        android:id="@+id/searchBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/deleteApp"
        android:id="@+id/deleteBtn"
        android:layout_alignTop="@+id/createBtn"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/moveApp"
        android:id="@+id/moveBtn"
        android:layout_alignBottom="@+id/viewEditBtn"
        android:layout_alignStart="@+id/translateBtn" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/translateApp"
        android:id="@+id/translateBtn"
        android:layout_below="@+id/viewEditBtn"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
